--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,42 @@
 * {
 	font-family: 'Patrick Hand SC', cursive;
 	box-sizing: border-box;
+	color: #a26769;
 }
+
+input,
+textarea {
+	color: black;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	margin: 0;
+}
+
 .App {
 	/* text-align: center; */
 	box-sizing: border-box;
 	/* font-family: 'Handlee', cursive; */
+}
+.mainContainer {
+	padding: 30px;
+	padding-top: 5rem;
+}
+
+.trash {
+	font-size: 2rem;
+}
+
+button {
+	border: none;
+}
+
+.noteTitle,
+.noteDescription {
+	color: black;
 }
