--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,22 +1,12 @@
 .headerWrapper {
 	display: flex;
 	justify-content: space-between;
-	background-color: aliceblue;
-}
-.editNoteIcon {
-	font-size: 40px;
+	background: #ece2d0;
+	padding: 1rem;
 }
 .titleIconWrapper {
 	display: flex;
 	align-items: center;
-}
-.noteBook {
-	z-index: 5;
-}
-.pen {
-	position: absolute;
-	left: 1rem;
-	font-size: 36px;
 }
 .headerTitle {
 	font-family: 'Patrick Hand SC', cursive;
@@ -25,4 +15,17 @@
 .headerLink {
 	display: flex;
 	align-items: center;
+	text-decoration: none;
+	font-size: 24px;
+	font-weight: 800;
+}
+.noteIcon {
+	font-size: 3em;
+	/* color: #bf9a8a; */
+}
+.linkWrapper {
+	display: flex;
+	align-items: center;
+	gap: 1em;
+	cursor: pointer;
 }
