--- a/src/App.css
+++ b/src/App.css
@@ -19,13 +19,12 @@ h6 {
 }
 
 .App {
-	/* text-align: center; */
 	box-sizing: border-box;
-	/* font-family: 'Handlee', cursive; */
+	position: relative;
 }
 .mainContainer {
 	padding: 30px;
-	padding-top: 5rem;
+	padding-top: 10rem;
 }
 
 .trash {
