--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -3,6 +3,9 @@
 	justify-content: space-between;
 	background: #ece2d0;
 	padding: 1rem;
+	position: fixed;
+	width: 100%;
+	z-index: 10;
 }
 .titleIconWrapper {
 	display: flex;
