--- a/src/Components/NoteItem/NoteItem.css
+++ b/src/Components/NoteItem/NoteItem.css
@@ -1,24 +1,38 @@
 .NoteItemWrapper {
-	min-width: 300px;
-	min-height: 200px;
-	position: relative;
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	gap: 16px;
 	padding: 1rem;
+}
+.pinBtnWrapper {
+	display: flex;
+	justify-content: flex-end;
 }
 
 .pinAndTrashBtn {
-	font-size: 18px;
-	position: absolute;
-	background: transparent;
-	border: none;
-}
-
-.pin {
-	top: 20px;
-	right: 20px;
-	color: #a26769;
-	transition: all ease ease-out 0.9s;
+	font-size: 1.4rem;
 }
 
 .pinRotate {
 	transform: rotate(45deg);
+}
+.trashBtnWrapper {
+	display: flex;
+	justify-content: flex-start;
+}
+.textWrapper {
+	height: 150px;
+	width: 300px;
+}
+
+.noteDescription {
+	font-family: 'Source Sans Pro', sans-serif;
+	font-weight: normal;
+	font-size: 14px;
+	text-align: justify;
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: 7;
+	white-space: initial;
 }
