--- a/src/App.css
+++ b/src/App.css
@@ -33,9 +33,16 @@ h6 {
 
 button {
 	border: none;
+	background: transparent;
 }
 
 .noteTitle,
 .noteDescription {
 	color: black;
+}
+.ellipsis {
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	width: 100%;
 }
