add global btn disable cursor

--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,10 @@ button {
 	background: transparent;
 }
 
+button:disabled {
+	cursor: not-allowed;
+}
+
 .noteTitle,
 .noteDescription {
 	color: black;
