--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,22 @@
 * {
 	font-family: 'Patrick Hand SC', cursive;
 	box-sizing: border-box;
-	color: #a26769;
+	color: var(--text-color);
+}
+
+body {
+	background-color: var(--bg-color);
 }
 
 input,
 textarea {
-	color: black;
+	background: var(--input-box);
 }
 
+/* .noteTitle,
+.noteDescription {
+	color: black;
+} */
 h1,
 h2,
 h3,
@@ -40,10 +48,6 @@ button:disabled {
 	cursor: not-allowed;
 }
 
-.noteTitle,
-.noteDescription {
-	color: black;
-}
 .ellipsis {
 	white-space: nowrap;
 	overflow: hidden;
@@ -55,4 +59,11 @@ button:disabled {
 }
 .mr10 {
 	margin-right: 10px;
+}
+.flexBox {
+	display: flex;
+	gap: 3rem;
+}
+::placeholder {
+	color: var(--input-placeholder);
 }
