--- a/src/Components/TakeNote/TakeNote.css
+++ b/src/Components/TakeNote/TakeNote.css
@@ -1,5 +1,4 @@
 .takeNoteWrapper {
-	/* border: 2px solid #d5b9b2; */
 	min-height: 200px;
 	max-width: 600px;
 	padding: 30px;
@@ -69,7 +68,7 @@ input:focus {
 	color: #a26769;
 }
 .textColor {
-	color: #a26769;
+	color: var(--text-color);
 }
 
 .letterSpacing {
