improve class nIHeadingContainer

--- a/src/Components/NoteList/NoteList.css
+++ b/src/Components/NoteList/NoteList.css
@@ -6,6 +6,8 @@
 .nIHeadingContainer {
 	display: flex;
 	align-items: center;
+	justify-content: space-between;
+	padding: 2rem 0;
 }
 .delAll {
 	padding: 0.5rem;
